tests/fixtures/typeck/array_index_non_int.diag
error: array index must be Int
  --> array_index_non_int.veyl:3:24
   |
  3 |     let value = values[true];
   |                        ^^^^
