tests/fixtures/typeck/array_index_non_int.veyl
fn main() {
    let values = [1, 2, 3];
    let value = values[true];
}
